--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,22 +8,25 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-      - run: docker build -t eslamnasser100/react-test -f Dockerfile.dev .
-      - run: docker run -e CI=true eslamnasser100/react-test npm run test
+      - name: Checkout Code
+        uses: actions/checkout@v2
 
-      - name: create deployment package
-        run : zip -r deploy.zip . -x '*.git*'
+      - name: Build, Test, and Push Docker Image
+        run: |
+          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+          docker build -t eslamnasser100/react-test -f Dockerfile.dev .
+          docker run -e CI=true eslamnasser100/react-test npm run test
 
-      # creating deployment configurations for elastic beans
-      - name: Deploy over the ElasticBeanstalk
-        uses: einaregilsson/beanstalk-deploy@v22
+      - name: Create Deployment Package
+        run: zip -r deploy.zip . -x '*.git*'
+
+      - name: Deploy to Elastic Beanstalk
+        uses: einaregilsson/beanstalk-deploy@v20
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
           application_name: "react-project"
           environment_name: "React-project-env"
+          region: "us-east-1"
           version_label: ${{ github.sha }}
-          region: "eu-north-1"
           deployment_package: deploy.zip
