reconfig github actions

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,6 @@ jobs:
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
           application_name: "react-project"
           environment_name: "React-project-env"
-          region: "us-east-1"
+          region: "eu-north-1"
           version_label: ${{ github.sha }}
           deployment_package: deploy.zip
